# TinyWebServer

./: .clang-format  CMakeLists.txt  main.cpp
include/tws/: exception.hpp  platform.hpp
include/tws/async/: promise.hpp  promise.inl  reactor.hpp  reactor_io_uring.hpp  reactor_io_uring.inl  reactor_iocp.hpp  reactor_iocp.inl  scheduler.hpp  task.hpp  task.inl
include/tws/net/: endpoint.hpp  enums.hpp  ip_address.hpp  socket.hpp
include/tws/utils/: fstr.h  fstr.hpp
src/: exception.cpp  exception.hpp
src/async/: reactor.cpp  reactor_io_uring.cpp  reactor_iocp.cpp  scheduler.cpp
src/core/async/: enums.hpp  event_data.cpp  event_data.hpp  io_completion_port.cpp  io_completion_port.hpp  io_uring.cpp  io_uring.hpp  reactor.cpp  reactor.hpp  reactor.inl  task.hpp  task.inl  types.hpp
src/core/net/: endpoint.cpp  endpoint.hpp  enums.hpp  ip_address.cpp  ip_address.hpp  platform.hpp  socket.cpp  socket.hpp  socket_handle.cpp  socket_handle.hpp  socket_initializer.cpp  socket_initializer.hpp
src/net/: endpoint.cpp  ip_address.cpp  socket.cpp
test/: CMakeLists.txt  test_socket.cpp
